# wreq-js

./: .c8rc.json  .gitignore  .npmignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  biome.json  package-lock.json  package.json  renovate.json  tsconfig.json  tsup.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  test-pr.yml  test.yml
.husky/: pre-commit
docs/: ARCHITECTURE.md  BENCHMARK.md  BUILD.md  PUBLISHING.md  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs/api-reference/: fetch.mdx  overview.mdx  sessions.mdx  transport.mdx  utilities.mdx  websocket.mdx
docs/concepts/: browser-profiles.mdx  compatibility-matrix.mdx  sessions.mdx  transport.mdx
docs/guides/: proxy-usage.mdx  streaming.mdx  websockets.mdx
rust/: Cargo.toml  build.rs
rust/bench-server/: Cargo.toml
rust/bench-server/src/: main.rs
rust/src/: client.rs  generated_profiles.rs  lib.rs  websocket.rs
scripts/: smoke-native.cjs
scripts/aws-perf/: cleanup-stale.sh  compare-bench.mjs  ec2-compare.sh  pricing-info.mjs  remote-compare.sh  setup-iam.sh
src/: generated-types.ts  node-wreq.ts  types.ts  wreq-js.ts
src/bench/: local-bench-server.ts  run.ts
src/test/: node-wreq.spec.ts  run-with-local-server.ts  websocket.spec.ts
src/test/helpers/: http.ts  local-test-server.ts
src/test/helpers/certs/: expired.crt  expired.key  self-signed.crt  self-signed.key
src/test/http/: coverage.spec.ts  docs-syntax.spec.ts  insecure.spec.ts  requests.spec.ts  sessions.spec.ts  transport.spec.ts
