[package]
name = "wreq-js"
version = "1.3.0"
edition = "2024"
license = "MIT"
authors = ["Oleksandr Herasymov", "will-work-for-meal"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# HTTP client with browser impersonation
wreq = { version = "6.0.0-rc.23", default-features = false, features = ["cookies", "gzip", "brotli", "deflate", "zstd", "charset", "system-proxy", "socks", "ws", "stream"] }
wreq-util = { version = "3.0.0-rc.7", features = ["emulation-serde", "emulation-rand"] }

# Ordered collections for deterministic headers/cookies
indexmap = "2.12.1"

# WebSocket support
futures-util = "0.3"

# Byte buffers for streaming bodies
bytes = "1.11"

# Neon for Node.js bindings
neon = { version = "1.1.1", default-features = false, features = ["napi-6"] }

# Concurrent maps
dashmap = "6.1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
anyhow = "1.0.100"

# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util = "0.7.17"

# Global state management
once_cell = "1.21.3"
moka = { version = "0.12.11", features = ["sync"] }
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
wreq-util = { version = "3.0.0-rc.7", features = ["emulation-serde", "emulation-rand"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
